<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dam.stockfinder.ui.home.HomeFragment"
        android:label="@string/menu_Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dam.stockfinder.ui.gallery.GalleryFragment"
        android:label="@string/menu_Escaner"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.dam.stockfinder.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ListaCompleta"
        tools:layout="@layout/fragment_slideshow" />
</navigation>